added offline image upload

--- a/main/res/menu/activity_main_drawer.xml
+++ b/main/res/menu/activity_main_drawer.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
+        <item android:id="@+id/photo" android:icon="@android:drawable/ic_menu_camera"
+            android:title="Photo" />
+        <item android:id="@+id/signature" android:icon="@android:drawable/ic_menu_gallery"
+            android:title="Signature" />
         <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Uploads" />
         <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
             android:title="Tools" />
     </group>
