--- a/main/res/drawable/side_nav_bar.xml
+++ b/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#81C784"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
+        android:startColor="#f78c80"
+        android:centerColor="#e84c4c"
+        android:endColor="#e84c4c"
         android:type="linear"
         android:angle="135"/>
 </shape>
