--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#E76F61</color>
+    <color name="colorPrimaryDark">#E76F61</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorLightGrey">#cccccc</color>
+    <color name="red">#f78c80</color>
+    <color name="white">#FFFFFF</color>
 </resources>
