--- a/main/res/layout/image_preview_fragment.xml
+++ b/main/res/layout/image_preview_fragment.xml
@@ -8,8 +8,10 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.90"
+        android:layout_weight="0.80"
+        android:scaleType="fitXY"
         android:id="@+id/image_preview"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal" />
 
     <Button
